amazon-bedrock/1.0/modules/ROOT/pages/configuring-chat-operations.adoc
= Configuring Chat Operations

Configure the *CHAT Answer Prompt*, *CHAT Answer Prompt with Memory*, and *CHAT Answer Prompt Streaming* operations.

== Configure the CHAT Answer Prompt Operation

The *CHAT Answer Prompt* operation is a simple prompt request operation to the configured LLM. It uses a plain text prompt as input and responds with a plain text answer.

To configure the *CHAT Answer Prompt* operation:

include::connectors::partial$t-configure-operations.adoc[]
* *Prompt*
+
The prompt as plain text for the operation.

* *Model name*
+
The name of the LLM. You can select any model from the supported LLM Providers.

* *Region*
+
The AWS region.

* *Temperature*
+
A value between 0 and 1 that regulates the creativity of LLMs' responses. Use lower temperature if you want more deterministic responses, and use higher temperature if you want more creative or different responses for the same prompt from LLMs on Amazon Bedrock.

* *Top p*
+
The percentage of most-likely candidates that the model considers for the next token.

* *Top k*
+
The number of most-likely candidates that the model considers for the next token.

* *Max token count*
+
The maximum number of tokens to consume during output generation.

This is the XML for this operation:

[source,xml,linenums]
----
<mac-bedrock:
  chat-answer-prompt 
  doc:name="Chat answer prompt" 
  doc:id="23456789-2345-2345-2345-234567890abc" 
  config-ref="AWS" 
  prompt="#[payload.prompt]"
  modelName="amazon.titan-text-premier-v1:0"
/>
----

=== Output Configuration

This operation responds with a JSON payload. This is an example response:

[source,json]
----
{
    "inputTextTokenCount": 6,
    "results": [
        {
            "tokenCount": 69,
            "outputText": "Bern is the capital of Switzerland.\n\nBern is the capital of the Swiss Confederation. The municipality is located at the confluence of the Aare River into the river of the same name, and is the eighth-most populous city in Switzerland, with a population of around 134,200.",
            "completionReason": "FINISH"
        }
    ]
}
----

* `inputTextTokenCount`
+
Token used to process the input.

* `results`
** `tokenCount`: The number of tokens used to generate the output.
** `outputText`: The response from the LLM on the prompt sent.
** `completionReason`: The reason the response finished being generated. Possible values:
*** `FINISHED` – The response was fully generated.
*** `LENGTH` – The response was truncated because of the response length you set.
*** `STOP_CRITERIA_MET` – The response was truncated because the stop criteria was reached.
*** `RAG_QUERY_WHEN_RAG_DISABLED` – The feature is disabled and cannot complete the query.
*** `CONTENT_FILTERED` – The contents were filtered or removed by the content filter applied.

== Configure the CHAT Answer Prompt with Memory Operation

The *CHAT Answer Prompt with Memory* operation is useful when you want to provide memory of the conversation history for a multi-user chat operation.

To configure the *CHAT Answer Prompt with Memory* operation:

include::connectors::partial$t-configure-operations.adoc[]
* *Prompt*
+
The prompt for the operation.

* *Memory path*
+
The path to the in-memory database for storing conversation history. For example: `mule.home ++ "/apps/" ++ app.name ++ "/chat-memory.db"`

* *Memory name*
+
The name of the conversation. For multi-user support, enter the unique user ID.

* *Keep last messages*
+
The maximum number of messages to remember for the conversation defined in *Memory name*.

* *Model name*
+
The name of the LLM. You can select any model from the supported LLM Providers.

* *Region*
+
The AWS region.

* *Temperature*
+
A value between 0 and 1 that regulates the creativity of LLMs' responses. Use lower temperature if you want more deterministic responses, and use higher temperature if you want more creative or different responses for the same prompt from LLMs on Amazon Bedrock.

* *Top p*
+
The percentage of most-likely candidates that the model considers for the next token.

* *Top k*
+
The number of most-likely candidates that the model considers for the next token.

* *Max token count*
+
The maximum number of tokens to consume during output generation.

This is the XML for this operation:

[source,xml,linenums]
----
<mac-bedrock:
  chat-answer-prompt-memory 
  doc:name="Chat answer prompt memory" 
  doc:id="975945a8-b077-401f-a5d2-41d6b75393fb" 
  config-ref="AWS" prompt="#[payload.prompt]" 
  memoryPath='#[mule.home ++ "/apps/" ++ app.name ++ "/chat-memory.db"]' 
  memoryName="Amir" 
  keepLastMessages="10" 
  modelName="amazon.titan-text-premier-v1:0"
/>
----

=== Output Configuration

This operation responds with a JSON payload. This is an example response:

[source,json]
----
{
  "inputTextTokenCount": 6,
  "results": [
    {
      "tokenCount": 69,
      "outputText": "?\nBern is the capital of Switzerland.\n\nBern is the capital of the Swiss Confederation. The municipality is located at the confluence of the Aare River into the river of the same name, and is the eighth-most populous city in Switzerland, with a population of around 134,200. ",
      "completionReason": "FINISH"
    }
  ]
}
----

* `inputTextTokenCount`: The number of tokens used to process the input.
* `results`: An array containing the generated response objects. Each object includes:
** `tokenCount`: The number of tokens used to generate the output.
** `outputText`: The response from the LLM for the provided prompt.
** `completionReason`: The reason the response generation finished. Possible values are:
  *** `FINISH` – The response was fully generated.
  *** `LENGTH` – The response was truncated because the maximum response length was reached.
  *** `STOP_CRITERIA_MET` – The response was truncated because the stop criteria was reached.
  *** `RAG_QUERY_WHEN_RAG_DISABLED` – The feature is disabled and cannot complete the query.
  *** `CONTENT_FILTERED` – The contents were filtered or removed by the content filter applied.

== Configure the CHAT Answer Prompt Streaming Operation

The *CHAT Answer Prompt Streaming* operation is similar to the *CHAT Answer Prompt* operation but streams the response incrementally, allowing for real-time display of the response as it is generated.

To configure the *CHAT Answer Prompt Streaming* operation:

include::connectors::partial$t-configure-operations.adoc[]
* *Prompt*
+
The prompt as plain text for the operation.

* *Model name*
+
The name of the LLM. You can select any model from the supported LLM Providers.

* *Region*
+
The AWS region.

* *Temperature*
+
A value between 0 and 1 that regulates the creativity of LLMs' responses. Use lower temperature if you want more deterministic responses, and use higher temperature if you want more creative or different responses for the same prompt from LLMs on Amazon Bedrock.

* *Top p*
+
The percentage of most-likely candidates that the model considers for the next token.

* *Top k*
+
The number of most-likely candidates that the model considers for the next token.

* *Max token count*
+
The maximum number of tokens to consume during output generation.

This is the XML for this operation:

[source,xml,linenums]
----
<mac-bedrock:
  chat-answer-prompt-streaming 
  doc:name="Chat answer prompt streaming" 
  doc:id="34567890-3456-3456-3456-345678901234" 
  config-ref="AWS" 
  prompt="#[payload.prompt]"
  modelName="amazon.titan-text-express-v1"
/>
----

=== Output Configuration

This operation streams the response using Server-Sent Events (SSE). The response is delivered incrementally as the model generates it, allowing for real-time display of the response in chat applications.

== See Also

* xref:index.adoc[Amazon Bedrock Connector Overview]
* xref:amazon-bedrock-connector-reference.adoc[Amazon Bedrock Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
